force-app/main/default/objects/ffct__BundleJobItem__c/fields/ffct__BundleProvisionState__c.field-meta.xml
<CustomField>
    <fullName>ffct__BundleProvisionState__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Provision State</label>
    <referenceTo>ffct__Bundle_Provision_State__c</referenceTo>
    <relationshipName>BundleJobItems</relationshipName>
    <type>Lookup</type>
</CustomField>