force-app/main/default/objects/ffct__BundleJobItem__c/fields/ffct__BundleSource__c.field-meta.xml
<CustomField>
    <fullName>ffct__BundleSource__c</fullName>
    <label>Bundle Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>