force-app/main/default/objects/ffct__BundleJobItem__c/fields/ffct__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ffct__ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>