force-app/main/default/objects/ffct__BundleJobItem__c/fields/ffct__SkipInstalledPackageComponents__c.field-meta.xml
<CustomField>
    <fullName>ffct__SkipInstalledPackageComponents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Installed Package Components</label>
    <type>Checkbox</type>
</CustomField>